Add task annotations and update readme