@@ -77,3 +77,20 @@ gradlePlugin {
 
 description = 'Plugins to ease use of Node tools (Node, Grunt, Gulp)'
 
+/**
+ * This is temporary until we move all tests to testkit
+ */
+tasks.withType(Test).configureEach {
+    Provider<String> jdkVersionForTestsEnvVariable = providers.environmentVariable("JDK_VERSION_FOR_TESTS")
+    Integer jdkVersionForTests = jdkVersionForTestsEnvVariable.isPresent() ? jdkVersionForTestsEnvVariable.get().toInteger() : 8
+    if(jdkVersionForTests >= 17) {
+        jvmArgs = [
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED'
+
+        ]
+    }
+}
